build_error.log.txt
    Checking cmsrust v0.1.0 (/Users/pirs/Documents/www/cmsrust)
error[E0382]: borrow of moved value: `role`
  --> src/services/user_service.rs:87:67
   |
56 |         role: UserRole,
   |         ---- move occurs because `role` has type `UserRole`, which does not implement the `Copy` trait
...
79 |             role: Set(role),
   |                       ---- value moved here
...
87 |         println!("✅ Пользователь создан: {} (Роль: {:?})", email, role);
   |                                                                    ^^^^ value borrowed here after move
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider cloning the value if the performance cost is acceptable
   |
79 |             role: Set(role.clone()),
   |                           ++++++++

For more information about this error, try `rustc --explain E0382`.
error: could not compile `cmsrust` (bin "cmsrust") due to 1 previous error
